dist/1.0/bin/sample/retrieveUnpackaged/objects/ConfiguredPricingItem__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PricingItem__c</fullName>
        <label>Pricing Item</label>
        <referenceTo>PricingItem__c</referenceTo>
        <relationshipLabel>Configured Pricing Items</relationshipLabel>
        <relationshipName>Configured_Pricing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Configured Pricing Item</label>
    <nameField>
        <label>Configured Pricing Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configured Pricing Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>